--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t marcosjanuario/react-test -f Dockerfile.dev ./client/Dockerfile.dev
+  - docker build -t marcosjanuario/react-test -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run marcosjanuario/react-test npm run test -- --coverage
