--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ after_success:
   - docker build -t marcosjanuario/multi-server ./server
   - docker build -t marcosjanuario/multi-worker ./worker
   # login to the docker-hub
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password--stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # take the images and push to docker-hub
   - docker push marcosjanuario/multi-client
   - docker push marcosjanuario/multi-nginx
